code/k8s/011/prometheus/prometheus-storage.yaml
# 1.命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: prometheus-storage

---

# 3.NFS 动态存储配置器，用于自动为 PVC 创建 PV
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: prometheus-storage
  name: nfs-client-provisioner # NFS 动态存储配置器，用于自动为 PVC 创建 PV
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-client-provisioner
  template:
    metadata:
      labels:
        app: nfs-client-provisioner
    spec:
      serviceAccountName: nfs-client-provisioner # 指定使用的 ServiceAccountName
      containers:
        - name: nfs-client-provisioner
          image: k8s.dockerproxy.com/sig-storage/nfs-subdir-external-provisioner:v4.0.2
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: nfs-client-root # 挂载的卷名称，与 volumes 部分定义的卷对应
              mountPath: /persistentvolumes # 将 NFS 卷挂载到容器内的 /persistentvolumes 路径，供容器读写 NFS 共享数据。
      volumes:
        - name: nfs-client-root # 定义一个名为 nfs-client-root 的 NFS 卷，连接到 NFS 服务器的指定地址和路径
          nfs:
            server: 10.20.1.139 # NFS 服务器地址
            path: /root/data/prometheus # NFS 共享路径
      nodeSelector: # 指定Pod运行的节点
        kubernetes.io/hostname: k8s-node01
      # nodeName: k8s-node01 # 指定 Pod 运行在 k8s-node01 节点上
